@@ -1,4 +1,4 @@
-// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2026 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.openapi.ui.impl;
 
 import com.intellij.concurrency.ThreadContext;
@@ -27,6 +27,7 @@ import com.intellij.openapi.application.impl.LaterInvocator;
 import com.intellij.openapi.command.CommandProcessor;
 import com.intellij.openapi.command.CommandProcessorEx;
 import com.intellij.openapi.diagnostic.Logger;
+import com.intellij.openapi.progress.ProgressManager;
 import com.intellij.openapi.project.DumbAware;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.ui.DialogWrapper;
@@ -40,6 +41,7 @@ import com.intellij.openapi.util.SystemInfoRt;
 import com.intellij.openapi.util.WindowStateService;
 import com.intellij.openapi.util.registry.Registry;
 import com.intellij.openapi.wm.IdeFocusManager;
+import com.intellij.openapi.wm.IdeFrame;
 import com.intellij.openapi.wm.WindowManager;
 import com.intellij.openapi.wm.ex.WindowManagerEx;
 import com.intellij.openapi.wm.impl.IdeFrameDecorator;
@@ -51,7 +53,7 @@ import com.intellij.openapi.wm.impl.customFrameDecorations.header.CustomHeader;
 import com.intellij.platform.ide.bootstrap.SplashManagerKt;
 import com.intellij.platform.locking.impl.IntelliJLockingUtil;
 import com.intellij.reference.SoftReference;
-import com.intellij.ui.AppUIUtilKt;
+import com.intellij.ui.AppUIUtil;
 import com.intellij.ui.ComponentUtil;
 import com.intellij.ui.DisposableWindow;
 import com.intellij.ui.ScreenUtil;
@@ -80,8 +82,6 @@ import kotlin.Pair;
 import kotlin.Unit;
 import kotlin.coroutines.EmptyCoroutineContext;
 import kotlin.jvm.functions.Function0;
-import kotlinx.coroutines.EventLoop;
-import kotlinx.coroutines.ThreadLocalEventLoop;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
@@ -117,6 +117,7 @@ import java.awt.event.MouseMotionListener;
 import java.awt.event.WindowAdapter;
 import java.awt.event.WindowEvent;
 import java.awt.image.BufferStrategy;
+import java.lang.ref.Reference;
 import java.lang.ref.WeakReference;
 import java.util.ArrayList;
 import java.util.List;
@@ -160,13 +161,20 @@ public class DialogWrapperPeerImpl extends DialogWrapperPeer {
         if (project == null && curWindow != null) {
           project = ProjectUtil.getProjectForWindow(curWindow);
           if (project == null) {
-            project = CommonDataKeys.PROJECT.getData(DataManager.getInstance().getDataContext(curWindow));
+            project = getProjectNonCancelable(curWindow);
           }
         }
 
         myProject = project;
 
         window = windowManager.suggestParentWindow(project);
+        // When the focused window is a non-IdeFrame window (e.g., a Lux host dialog in remote dev)
+        // and suggestParentWindow returned the IDE frame, prefer the focused window as parent.
+        // This ensures child dialogs appear over the actual focused window rather than the main frame.
+        if (curWindow != null && !(curWindow instanceof IdeFrame) && curWindow.isShowing()
+            && (window == null || window instanceof IdeFrame)) {
+          window = curWindow;
+        }
         if (window == null) {
           if (curWindow instanceof IdeFrameImpl) {
             window = curWindow;
@@ -197,6 +205,11 @@ public class DialogWrapperPeerImpl extends DialogWrapperPeer {
 
     myDialog = createDialog(headless, owner, wrapper, myProject, ideModalityType);
     myCanBeParent = headless || canBeParent;
+  }
+
+  private static @Nullable Project getProjectNonCancelable(@NotNull Window curWindow) {
+    return ProgressManager.getInstance().computeInNonCancelableSection(() ->
+    CommonDataKeys.PROJECT.getData(DataManager.getInstance().getDataContext(curWindow)));
   }
 
   /**
@@ -243,7 +256,7 @@ public class DialogWrapperPeerImpl extends DialogWrapperPeer {
     return app == null ? null : WindowManagerEx.getInstanceEx();
   }
 
-  private static AbstractDialog createDialog(boolean headless, Window owner, DialogWrapper wrapper, Project project, DialogWrapper.IdeModalityType ideModalityType) {
+  private static @NotNull AbstractDialog createDialog(boolean headless, Window owner, @NotNull DialogWrapper wrapper, Project project, DialogWrapper.IdeModalityType ideModalityType) {
     if (headless) {
       return new HeadlessDialog(wrapper);
     }
@@ -300,8 +313,9 @@ public class DialogWrapperPeerImpl extends DialogWrapperPeer {
   }
 
   @Override
+  @SuppressWarnings("SwingIsEventDispatchThread")
   protected void dispose() {
-    LOG.assertTrue(EventQueue.isDispatchThread(), "Access is allowed from event dispatch thread only");
+    LOG.assertTrue(EventQueue.isDispatchThread(), "Access is allowed from the event dispatch thread only");
     for (Runnable runnable : myDisposeActions) {
       runnable.run();
     }
@@ -380,7 +394,7 @@ public class DialogWrapperPeerImpl extends DialogWrapperPeer {
 
   @Override
   public void setAppIcons() {
-    AppUIUtilKt.updateAppWindowIcon(getWindow());
+    AppUIUtil.updateAppWindowIcon(getWindow());
   }
 
   @Override
@@ -458,8 +472,9 @@ public class DialogWrapperPeerImpl extends DialogWrapperPeer {
   }
 
   @Override
+  @SuppressWarnings("SwingIsEventDispatchThread")
   public CompletableFuture<?> show() {
-    LOG.assertTrue(EventQueue.isDispatchThread(), "Access is allowed from event dispatch thread only");
+    LOG.assertTrue(EventQueue.isDispatchThread(), "Access is allowed from the event dispatch thread only");
 
     AnCancelAction anCancelAction = new AnCancelAction();
     JRootPane rootPane = getRootPane();
@@ -502,7 +517,6 @@ public class DialogWrapperPeerImpl extends DialogWrapperPeer {
 
     // ProgressWindow starts a modality state itself
     @SuppressWarnings("deprecation") boolean changeModalityState = appStarted && myDialog.isModal() && !isProgressDialog();
-    Project project = myProject;
 
     Consumer<Runnable> lockContextWrapper;
     Function0<Unit> lockCleanup;
@@ -607,14 +621,15 @@ public class DialogWrapperPeerImpl extends DialogWrapperPeer {
   }
 
   @RequiresEdt
-  private static AccessToken resetCoroutinesEventLoop() {
-    EventLoop currentEventLoop = ThreadLocalEventLoop.INSTANCE.currentOrNull$kotlinx_coroutines_core();
-    ThreadLocalEventLoop.INSTANCE.resetEventLoop$kotlinx_coroutines_core();
+  @SuppressWarnings({"KotlinInternalInJava", "UnnecessaryFullyQualifiedName"})
+  private static @NotNull AccessToken resetCoroutinesEventLoop() {
+    kotlinx.coroutines.EventLoop currentEventLoop = kotlinx.coroutines.ThreadLocalEventLoop.INSTANCE.currentOrNull$kotlinx_coroutines_core();
+    kotlinx.coroutines.ThreadLocalEventLoop.INSTANCE.resetEventLoop$kotlinx_coroutines_core();
     return new AccessToken() {
       @Override
       public void finish() {
         if (currentEventLoop != null) {
-          ThreadLocalEventLoop.INSTANCE.resetEventLoop$kotlinx_coroutines_core();
+          kotlinx.coroutines.ThreadLocalEventLoop.INSTANCE.resetEventLoop$kotlinx_coroutines_core();
         }
       }
     };
@@ -670,7 +685,7 @@ public class DialogWrapperPeerImpl extends DialogWrapperPeer {
   }
 
   private static final class MyDialog extends JDialog implements DialogWrapperDialog, UiDataProvider, Queryable, AbstractDialog, DisposableWindow {
-    private final WeakReference<DialogWrapper> myDialogWrapper;
+    private final Reference<DialogWrapper> myDialogWrapper;
 
     /**
      * Initial size of the dialog. When the dialog is being closed and
@@ -680,21 +695,19 @@ public class DialogWrapperPeerImpl extends DialogWrapperPeer {
     private Dimension myInitialSize;
     private String myDimensionServiceKey;
     private static final String NORMAL_BOUNDS_SUFFIX = "_normalized";
-    private boolean myOpened = false;
-    private boolean myDisposed = false;
+    private boolean myOpened;
+    private boolean myDisposed;
 
     private MyDialog.MyWindowListener myWindowListener;
 
-    private final WeakReference<Project> myProject;
+    private final Reference<Project> myProject;
 
     private @Nullable MacDirtySizeHack myMacDirtySizeHack;
 
-    MyDialog(Window owner,
-                    DialogWrapper dialogWrapper,
-                    Project project) {
+    MyDialog(Window owner, @NotNull DialogWrapper dialogWrapper, Project project) {
       super(owner);
       myDialogWrapper = new WeakReference<>(dialogWrapper);
-      myProject = project != null ? new WeakReference<>(project) : null;
+      myProject = project == null ? null : new WeakReference<>(project);
 
       setFocusTraversalPolicy(new LayoutFocusTraversalPolicy() {
         @Override
@@ -736,18 +749,19 @@ public class DialogWrapperPeerImpl extends DialogWrapperPeer {
 
     @Override
     public void uiDataSnapshot(@NotNull DataSink sink) {
-      DialogWrapper wrapper = myDialogWrapper.get();
-      DataSink.uiDataSnapshot(sink, wrapper);
+      DataSink.uiDataSnapshot(sink, getDialogWrapper());
       Project project = getProject();
       if (project != null && project.isInitialized()) {
         sink.set(CommonDataKeys.PROJECT, project);
       }
     }
 
-    private void fitToScreen(Rectangle rect) {
+    private void fitToScreen(@NotNull Rectangle rect) {
       if (myDialogWrapper == null) return; // this can be invoked from super constructor before this field is assigned
       final DialogWrapper wrapper = myDialogWrapper.get();
-      if (wrapper != null) wrapper.fitToScreen(rect);
+      if (wrapper != null) {
+        wrapper.fitToScreen(rect);
+      }
     }
 
     @Override
@@ -995,7 +1009,7 @@ public class DialogWrapperPeerImpl extends DialogWrapperPeer {
         setBounds(bounds);
       }
 
-      DialogWrapper wrapper = myDialogWrapper == null ? null : myDialogWrapper.get();
+      DialogWrapper wrapper = getDialogWrapper();
       if (wrapper != null) {
         wrapper.beforeShowCallback();
       }
@@ -1014,15 +1028,14 @@ public class DialogWrapperPeerImpl extends DialogWrapperPeer {
     }
 
     private void logMonitorConfiguration() {
-      var ideFrame = WindowManager.getInstance().getFrame(CommonDataKeys.PROJECT.getData(DataManager.getInstance().getDataContext(this)));
+      var ideFrame = WindowManager.getInstance().getFrame(getProjectNonCancelable(this));
       for (String message : ScreenUtil.loggableMonitorConfiguration(ideFrame)) {
         LOG.debug(message);
       }
     }
 
-    private @Nullable Project guessProjectDependingOnKey(String key) {
-      return !key.startsWith(WindowStateService.USE_APPLICATION_WIDE_STORE_KEY_PREFIX) ?
-             CommonDataKeys.PROJECT.getData(DataManager.getInstance().getDataContext(this)) : null;
+    private @Nullable Project guessProjectDependingOnKey(@NotNull String key) {
+      return key.startsWith(WindowStateService.USE_APPLICATION_WIDE_STORE_KEY_PREFIX) ? null : getProjectNonCancelable(this);
     }
 
     private static void maximize(@NotNull Dimension size, @Nullable Dimension alternativeSize) {
@@ -1042,7 +1055,7 @@ public class DialogWrapperPeerImpl extends DialogWrapperPeer {
         size.width = Math.max(size.width, tableSize.width);
         size.height = Math.max(size.height, tableSize.height + size.height - table.getParent().getHeight());
       }
-      size.width = Math.min(1000, Math.max(600, size.width));
+      size.width = Math.clamp(size.width, 600, 1000);
       size.height = Math.min(800, size.height);
       return size;
     }
@@ -1145,7 +1158,7 @@ public class DialogWrapperPeerImpl extends DialogWrapperPeer {
         saveSize();
       }
 
-      public void saveSize() {
+      void saveSize() {
         if (myDimensionServiceKey != null &&
             myInitialSize != null &&
             myOpened) { // myInitialSize can be null only if dialog is disposed before first showing
@@ -1229,7 +1242,7 @@ public class DialogWrapperPeerImpl extends DialogWrapperPeer {
         }
       }
 
-      Dimension getSize() {
+      @NotNull Dimension getSize() {
         return new Dimension(width, height);
       }
 
@@ -1260,14 +1273,14 @@ public class DialogWrapperPeerImpl extends DialogWrapperPeer {
         setGlassPane(new IdeGlassPaneImpl(this));
         myGlassPaneIsSet = true;
         putClientProperty("DIALOG_ROOT_PANE", true);
-        setBorder(JBUI.CurrentTheme.Window.getBorder(isUndecorated()));
+        setBorder(JBUI.CurrentTheme.Window.getDialogBorder(isUndecorated()));
       }
 
       @Override
       protected @NotNull JLayeredPane createLayeredPane() {
         JLayeredPane p = new JBLayeredPane() {
           @Override
-          protected Graphics getComponentGraphics(Graphics g) {
+          protected @NotNull Graphics getComponentGraphics(Graphics g) {
             return JBSwingUtilities.runGlobalCGTransform(this, super.getComponentGraphics(g));
           }
         };
@@ -1278,7 +1291,7 @@ public class DialogWrapperPeerImpl extends DialogWrapperPeer {
       @Override
       public void validate() {
         super.validate();
-        DialogWrapper wrapper = myDialogWrapper.get();
+        DialogWrapper wrapper = getDialogWrapper();
         if (wrapper != null && wrapper.isAutoAdjustable()) {
           Window window = wrapper.getWindow();
           if (window != null) {
@@ -1336,7 +1349,7 @@ public class DialogWrapperPeerImpl extends DialogWrapperPeer {
 
       @Override
       public void uiDataSnapshot(@NotNull DataSink sink) {
-        DialogWrapper wrapper = myDialogWrapper.get();
+        DialogWrapper wrapper = getDialogWrapper();
         if (wrapper == null) return;
         sink.set(PlatformDataKeys.UI_DISPOSABLE, wrapper.getDisposable());
       }
@@ -1376,5 +1389,4 @@ public class DialogWrapperPeerImpl extends DialogWrapperPeer {
   public void setAutoRequestFocus(boolean b) {
     UIUtil.setAutoRequestFocus((JDialog)myDialog, b);
   }
-  
 }
