@@ -3,6 +3,7 @@ package com.intellij.openapi.vfs.impl.local;
 
 import com.intellij.openapi.Disposable;
 import com.intellij.openapi.application.ApplicationManager;
+import com.intellij.openapi.application.ReadAction;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.util.Disposer;
 import com.intellij.openapi.util.Pair;
@@ -16,6 +17,7 @@ import com.intellij.openapi.vfs.VfsUtilCore;
 import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.openapi.vfs.VirtualFilePointerCapableFileSystem;
 import com.intellij.openapi.vfs.impl.SymlinksCapableFileSystem;
+import com.intellij.openapi.vfs.impl.local.windows.WindowsBufferedDirectoryStream;
 import com.intellij.openapi.vfs.newvfs.FileNavigator;
 import com.intellij.openapi.vfs.newvfs.ManagingFS;
 import com.intellij.openapi.vfs.newvfs.NewVirtualFile;
@@ -27,6 +29,7 @@ import com.intellij.openapi.vfs.newvfs.impl.VirtualFileSystemEntry;
 import com.intellij.openapi.vfs.newvfs.persistent.BatchingFileSystem;
 import com.intellij.util.ArrayUtil;
 import com.intellij.util.concurrency.AppExecutorUtil;
+import com.intellij.util.containers.CollectionFactory;
 import com.intellij.util.containers.ContainerUtil;
 import com.intellij.util.io.PlatformNioHelper;
 import com.intellij.util.system.OS;
@@ -40,21 +43,17 @@ import org.jetbrains.annotations.Unmodifiable;
 import java.io.IOException;
 import java.nio.file.AccessDeniedException;
 import java.nio.file.Files;
-import java.nio.file.InvalidPathException;
 import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.stream.StreamSupport;
 
-import static com.intellij.openapi.vfs.impl.local.LocalFileSystemEelUtil.listWithAttributesUsingEel;
 import static com.intellij.openapi.vfs.impl.local.LocalFileSystemEelUtil.readAttributesUsingEel;
 import static com.intellij.openapi.vfs.newvfs.impl.VirtualDirectoryImpl.createCreateEvent;
-import static com.intellij.util.containers.CollectionFactory.createFilePathMap;
 import static java.util.Objects.requireNonNullElse;
 import static java.util.concurrent.TimeUnit.MILLISECONDS;
 
@@ -98,20 +97,7 @@ public class LocalFileSystemImpl
   private final DiskQueryRelay<VirtualFile, Object> myContentGetter = new DiskQueryRelay<>(file -> readContent(file));
   private final DiskQueryRelay<VirtualFile, FileAttributes> myAttributeGetter = new DiskQueryRelay<>(file -> readAttributes(file));
   private final DiskQueryRelay<Pair<VirtualFile, @Nullable Set<String>>, Map<String, FileAttributes>> myChildrenAttrGetter =
-    new DiskQueryRelay<>(pair -> {
-      if (!pair.first.isDirectory()) {
-        return Collections.emptyMap();
-      }
-      Path path;
-      try {
-        path = Path.of(toIoPath(pair.first));
-      }
-      catch (InvalidPathException e) {
-        throw new RuntimeException(e);//TODO RC: why to wrap in RuntimeException?
-      }
-      return listWithAttributesUsingEel(path, pair.second);
-    });
-
+    new DiskQueryRelay<>(pair -> listWithAttributesImpl(pair.first, pair.second));
 
   protected LocalFileSystemImpl() {
     myManagingFS = ManagingFS.getInstance();
@@ -119,8 +105,15 @@ public class LocalFileSystemImpl
       AppExecutorUtil.getAppScheduledExecutorService().scheduleWithFixedDelay(
         () -> {
           var application = ApplicationManager.getApplication();
-          if (application != null && !application.isDisposed()) {
-            storeRefreshStatusToFiles();
+          try {
+            if (application != null && !application.isDisposed()) {
+              ReadAction.runBlocking(() -> {
+                storeRefreshStatusToFiles();
+              });
+            }
+          }
+          catch (Throwable e) {
+            LOG.warn("Exception while marking changed files dirty", e);
           }
         },
         STATUS_UPDATE_PERIOD, STATUS_UPDATE_PERIOD, MILLISECONDS
@@ -149,12 +142,22 @@ public class LocalFileSystemImpl
   private void storeRefreshStatusToFiles() {
     if (myWatcher.isOperational()) {
       var dirtyPaths = myWatcher.getDirtyPaths();
-      var marked = (
+      //TODO RC: this method is sometimes called without RA => it makes some VFS intermediate states visible -- e.g.
+      //         the state there file is already marked as removed, but is not yet removed from it's parent.children
+      //         list => causes FileDeletedException during path resolution.
+      //         We should either:
+      //         a) wrap _all_ the calls in RA -- carries an additional overhead
+      //         b) or deal with intermediate states without failing: e.g., FileNavigator.retryUpToN() is an attempt
+      //            in that direction, and it works, at least partially: most (but not all) of the reports in Diogen
+      //            now are from _successful_ retries, i.e. the issue was hidden from the client. But .retryUpToN()
+      //            is still not 100% a solution.
+      //         I'm yet undecided which approach is the optimal choice...
+      var somethingWasMarkedDirty = (
         markPathsDirty(dirtyPaths.dirtyPaths) |
         markFlatDirsDirty(dirtyPaths.dirtyDirectories) |
         markRecursiveDirsDirty(dirtyPaths.dirtyPathsRecursive)
       );
-      if (marked) {
+      if (somethingWasMarkedDirty) {
         statusRefreshed();
       }
     }
@@ -209,7 +212,14 @@ public class LocalFileSystemImpl
     return marked;
   }
 
-  public void markSuspiciousFilesDirty(@NotNull List<? extends VirtualFile> files) {
+  /// If [#myWatcher] is operational => the method marks dirty the dirty files detected by [#myWatcher],
+  /// plus `myWatcher.manualWatchRoots` (monitored roots that are un-watchable), recursively.
+  /// If [#myWatcher] is !operational (i.e. [#myWatcher] roots can't be trusted) => the method fallbacks
+  /// to using `fallbackCandidateRootsToRefresh`, i.e. marks them dirty, recursively
+  /// TODO RC: the semantics seems quite tangled to me: the `fallbackCandidateRootsToRefresh` passed in are plainly ignored if
+  ///          FileWatcher is operational -- not something a caller would expect. Looks like this is actually a private
+  ///          API, exclusively for RefreshSession, there such semantics has sense.
+  public void markSuspiciousFilesDirty(@NotNull List<? extends VirtualFile> fallbackCandidateRootsToRefresh) {
     storeRefreshStatusToFiles();
 
     if (myWatcher.isOperational()) {
@@ -221,9 +231,9 @@ public class LocalFileSystemImpl
       }
     }
     else {
-      for (var file : files) {
-        if (file.getFileSystem() == this) {
-          ((NewVirtualFile)file).markDirtyRecursively();
+      for (var root : fallbackCandidateRootsToRefresh) {
+        if (root.getFileSystem() == this) {
+          ((NewVirtualFile)root).markDirtyRecursively();
         }
       }
     }
@@ -405,7 +415,18 @@ public class LocalFileSystemImpl
     if (!dir.isDirectory()) {
       return ArrayUtil.EMPTY_STRING_ARRAY;
     }
-    try (var dirStream = Files.newDirectoryStream(Path.of(toIoPath(dir)))) {
+    var nioPath = Path.of(toIoPath(dir));
+    if (PlatformNioHelper.useWindowsBufferedDirectoryStream(nioPath)) {
+      try (var dirStream = new WindowsBufferedDirectoryStream(nioPath)) {
+        return StreamSupport.stream(dirStream.spliterator(), false)
+          .map(it -> it.getFirst().getFileName().toString())
+          .toArray(String[]::new);
+      }
+      catch (AccessDeniedException | NoSuchFileException e) { LOG.debug(e); }
+      catch (IOException | RuntimeException e) { LOG.warn(e); }
+      return ArrayUtil.EMPTY_STRING_ARRAY;
+    }
+    try (var dirStream = Files.newDirectoryStream(nioPath)) {
       return StreamSupport.stream(dirStream.spliterator(), false)
         .map(it -> it.getFileName().toString())
         .toArray(String[]::new);
@@ -417,32 +438,40 @@ public class LocalFileSystemImpl
 
   @Override
   public @NotNull Map<@NotNull String, @NotNull FileAttributes> listWithAttributes(@NotNull VirtualFile dir, @Nullable Set<String> childrenNames) {
-    if (!dir.isDirectory()) {
-      return Collections.emptyMap();
-    }
-    return myChildrenAttrGetter.accessDiskWithCheckCanceled(new Pair<>(dir, childrenNames));
+    return dir.isDirectory() ? myChildrenAttrGetter.accessDiskWithCheckCanceled(new Pair<>(dir, childrenNames)) : Map.of();
   }
 
-  protected static Map<String, FileAttributes> listWithAttributesImpl(@NotNull Path dir, @Nullable Set<String> filter) {
+  private static Map<String, FileAttributes> listWithAttributesImpl(VirtualFile dir, @Nullable Set<String> filter) {
     try {
-      var expectedSize = (filter == null) ? 10 : filter.size();
-      //We must return a 'normal' (=case-sensitive) map from this method, see BatchingFileSystem.listWithAttributes() contract:
-      Map<String, FileAttributes> childrenWithAttributes = createFilePathMap(expectedSize, /*caseSensitive: */true);
-
-      PlatformNioHelper.visitDirectory(dir, filter, (file, ioAttributesHolder) -> {
-        try {
-          var attributes = amendAttributes(file, FileAttributes.fromNio(file, ioAttributesHolder.get()));
-          childrenWithAttributes.put(file.getFileName().toString(), attributes);
-        }
-        catch (Exception e) { LOG.debug(e); }
-        return true;
-      });
-
-      return childrenWithAttributes;
+      var path = Path.of(toIoPath(dir));
+      var paths = LocalFileSystemEelUtil.getAttributeListingPaths(path);
+      if (paths.getFirst() != null) {
+        return listWithAttributesLocal(paths.getFirst(), filter);
+      }
+      else if (paths.getSecond() != null) {
+        return LocalFileSystemEelUtil.listWithAttributesUsingEel(paths.getSecond(), filter);
+      }
     }
     catch (AccessDeniedException | NoSuchFileException e) { LOG.debug(e); }
     catch (IOException | RuntimeException e) { LOG.warn(e); }
     return Map.of();
+  }
+
+  private static Map<String, FileAttributes> listWithAttributesLocal(@NotNull Path dir, @Nullable Set<String> filter) throws IOException {
+    var expectedSize = filter != null ? filter.size() : 10;
+    // we must return a 'normal' (=case-sensitive) map from this method (see the [BatchingFileSystem#listWithAttributes] contract)
+    var childrenWithAttributes = CollectionFactory.<FileAttributes>createFilePathMap(expectedSize, /*caseSensitive: */true);
+
+    PlatformNioHelper.visitDirectory(dir, filter, (file, ioAttributesHolder) -> {
+      try {
+        var attributes = amendAttributes(file, FileAttributes.fromNio(file, ioAttributesHolder.get()));
+        childrenWithAttributes.put(file.getFileName().toString(), attributes);
+      }
+      catch (Exception e) { LOG.debug(e); }
+      return true;
+    });
+
+    return childrenWithAttributes;
   }
 
   private static Object readContent(VirtualFile file) {
